「解決する」という用語をやめる

--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -356,7 +356,7 @@
 		$\C$ジェネリックフィルター$G$から作られる実数$c = \bigcup G$をCohen実数という．
 		Cohen実数から$G$を復元できる：$G = \{ c \upharpoonright n : n \in \omega \}$.
 		Cohen強制法は可算なので，明らかに$\sigma$-centeredを満たす．特にcccを満たす．
-		Cohen実数は$\relR_4^\perp$を解決する：
+		Cohen実数はグラウンドモデル上$\relR_4^\perp$-dominatingである：
 		\[
 		(\forall x \in \omega^\omega \cap V)(\exists^\infty n)(x(n) = \dot{c}(n)).
 		\]
@@ -367,7 +367,7 @@
 		$\B$ジェネリックフィルター$G$から作られる実数$r = \bigcap \{[T] : T \in G \}$をランダム実数という．
 		ランダム実数から$G$を復元できる：$G = \{ T \in \B : r \in [T] \}$．
 		ランダム強制法はcccを満たす．
-		ランダム実数は$\relR_2$を解決する：
+		ランダム実数はグラウンドモデル上$\relR_2$-dominatingである：
 		\[
 		(\forall x \in \Omega^V)(\dot{r} \not \in N_x).
 		\]
@@ -380,7 +380,7 @@
 		$\mathbb{D}$ジェネリックフィルター$G$から作られる実数$d = \bigcup \{ f \upharpoonright n : (n, f) \in G \}$をHechler実数という．
 		Hechler実数から$G$を復元できる：$G = \{ (n, f) : f \upharpoonright n = d \upharpoonright n \}$.
 		Hechler強制法は$\sigma$-centeredである．
-		Hechler実数は$\relR_3$を解決する：
+		Hechler実数はグラウンドモデル上$\relR_3$-dominatingである：
 		\[
 		(\forall x \in \omega^\omega \cap V)(\forall^\infty n)(x \le^* \dot{d}).
 		\]
@@ -389,7 +389,7 @@
 		
 		$\mathbb{A} = \{ T : T\text{は}2^{<\omega}\text{のsubtreeで}\mu([T])\ge 1/2 \}$で順序を$T' \le T \iff T' \subset T$で入れたものをアメーバ強制法という．
 		$\mathbb{D}$ジェネリックフィルター$G$に対して測度$1/2$の閉集合$K_G = \bigcap G$が定まる．そのコード$a$をアメーバ実数という．アメーバ実数$a$から$G$を復元できる： $G = \{ T \in \mathbb{A} : \hat{a} \subset [T] \}$．
-		アメーバ実数をBorelな方法で加工して得られる実数$b \in \mathcal{C}$があって，それは$\relR_1$を解決する：
+		アメーバ実数をBorelな方法で加工して得られる実数$b \in \mathcal{C}$があって，それはグラウンドモデル上$\relR_1$-dominatingである：
 		\[
 		(\forall x \in \mathcal{C}^V) (x \le b).
 		\]
@@ -404,7 +404,7 @@
 		を入れたものをeventually different強制法という．	
 		$\mathbb{E}$ジェネリックフィルター$G$から作られる実数$e = \bigcup \{ s  : (s, k, \varphi) \in G \}$をeventually different generic実数という．
 		eventually different強制法は$\sigma$-centeredである．
-		eventually different generic実数は$\relR_4$を解決する：
+		eventually different generic実数はグラウンドモデル上$\relR_4$-dominatingである：
 		\[
 		(\forall x \in \omega^\omega \cap V)(\forall^\infty n)(x(n) \ne \dot{e}(n)).
 		\]
