--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -22,6 +22,8 @@
 \usepackage{mdframed}
 \usepackage{geometry}
 \geometry{left=35mm,right=35mm,top=35mm,bottom=35mm}
+\usepackage[dvipdfmx]{hyperref}
+\usepackage{pxjahyper}
 
 \usetikzlibrary{positioning}
 \usetikzlibrary{calc}
@@ -173,6 +175,7 @@
 
 \title{Cichoń's maximumの証明}
 \author{後藤 達哉}
+\date{2022年9月22日 作成}
 
 \begin{document}
 	\maketitle
